Fix info sidebar on mobile

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -309,7 +309,7 @@ header.bg-gray-800 h1 {
         bottom: 0 !important;
     }
 
-    aside.panel.fixed.top-16 {
+    aside.panel.fixed.left-0.top-16 {
         top: 52px !important;
     }
     
